[project]
name = "moonbase"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ryan-d-young", email = "inbox@ryanyou.ng" }
]
dependencies = [
    "httpx>=0.27.2",
    "asyncpg>=0.30.0",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython>=8.29.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/moonbase"]
